Fixed issue when menu was covered by movie cards. Deleted overflow:hidden when menu is open

--- a/src/components/UI/menuContent/MenuContent.module.css
+++ b/src/components/UI/menuContent/MenuContent.module.css
@@ -5,13 +5,14 @@
 	pointer-events: none;
 	opacity: 0;
 	visibility: hidden;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	transform: translateX(-100%);
 	border-right: 1px solid var(--accent-light);
 	background-color: var(--primary-light);
 	transition: all 1s cubic-bezier(.17, .8, 0, 1);
+	z-index: 100;
 }
 
 .menuWrapper.menuOpen {
